# HDF5-FEMNIST

./: .gitignore  README.md  converter.py  demo.ipynb  get_data.sh  group_by_writer.py  pyproject.toml
