[project]
name = "hdf5-femnist"
version = "0.1.0"
description = "Convert FEMNIST dataset to HDF5 format"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "h5py>=3.12.1",
    "ipykernel>=6.29.5",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "pillow>=11.0.0",
    "tqdm>=4.67.1",
]
